# rag-docs

./: .gitignore  .gitleaks.toml  Dockerfile  Makefile  README.md  admin_chroma.py  backend.env.template  docker-compose.yaml  front.py  langchain_requirements.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  skaffold.yaml  test_api.py  test_langsmith.py  test_rag.py
.github/: CODEOWNERS  copilot_instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  integration_test_reusable.yml  integration_test_trigger.yml  pr_checking.yml  submission-check.yml
app/api/controllers/: process_document_controller.py
app/api/routers/: api.py  health.py
app/core/: config.py  dependencies.py  lifespan.py
app/infrastructure/embeddings/: client.py
app/infrastructure/llm/: client.py
app/infrastructure/vector_db/: chroma_client.py  repository.py
app/models/: process_document_request.py
app/procesar_documento/controller/: process_document_controller.py
app/procesar_documento/models/: process_document_request.py
app/procesar_documento/services/: process_document.py  process_document_handlers.py  process_document_interfaces.py
app/prompts/: prompts.yaml
app/routers/: api.py  health.py
app/services/document/: pdf_loader.py  text_extractor.py  text_splitter.py
app/services/rag/: rerank_service.py
app/utils/: load_prompt.py  logger.py
backend/: Dockerfile  README.md  admin_chroma.py  backend.env.template  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/routers/: health.py
backend/app/api/routers/v1/: __init__.py  document.py
backend/app/core/: config.py  dependencies.py  helpers.py  lifespan.py
backend/app/infrastructure/embeddings/: client.py
backend/app/infrastructure/llm/: client.py
backend/app/infrastructure/vector_db/: pgvector_client.py  pgvector_repository.py  repository.py
backend/app/models/requests/: document_request.py  search_request.py
backend/app/models/responses/: document_response.py  qa_response.py  search_response.py
backend/app/services/document/: pdf_loader.py  text_extractor.py  text_splitter.py
backend/app/services/ingest/: ingestion.py
backend/app/services/rag/: qa_service.py  rerank_service.py
backend/app/utils/: load_prompt.py
backend/tests/: __init__.py
backend/tests/behave/: document_processing.feature  document_qa_rerank.feature  environment.py
backend/tests/behave/data/: ingest-request.json
backend/tests/behave/steps/: document_processing_steps.py  document_qa_rerank_steps.py  document_qa_steps.py
backend/tests/fixtures/: README.md  generate_golden_responses.py
backend/tests/fixtures/golden_responses/: chromadb_search_response.json  cohere_rerank_response.json  llm_qa_response.json  sample_pdf_base64.json  settings_snapshot.json
backend/tests/unit/api/: document_router_test.py  health_router_test.py  process_document_controller_test.py
backend/tests/unit/infrastructure/: embeddings_client_test.py  vector_db_repository_test.py
backend/tests/unit/models/: requests_test.py  responses_test.py
backend/tests/unit/services/document/: pdf_loader_test.py  pdf_text_extractor_test.py
front/: Dockerfile  front.py  pyproject.toml  requirements.txt
front/components/: chatbot.py  qa_pdf.py
front/pages/: chatbot.py  qa_pdf.py
frontend/: front.py  frontend.env.template  pyproject.toml
frontend/components/: __init__.py  chatbot.py  qa_pdf.py
k8s/: README.md
k8s/base/: namespace.yaml
k8s/base/backend/: configmap.yaml  deployment.yaml  service.yaml  skaffold.yaml
k8s/base/frontend/: deployment.yaml  service.yaml  skaffold.yaml
k8s/base/ollama/: deployment.yaml  persistent_volume.yaml  (+3 more)
resources/: RESULTS.md  runs.csv
tests/: README.md
tests/behave/: document_processing.feature  document_qa.feature  document_qa_rerank.feature  environment.py
tests/fixtures/: conftest.py  generate_golden_responses.py
tests/old/: test_api.py  test_langsmith.py  test_rag.py
tests/unit/: __init__.py  test_models.py
(+29 files in other folders)
