[project]
name = "rag-docs-backend"
version = "0.0.2"
description = "RAG pipeline for PDF documents with FastAPI backend"
requires-python = ">=3.10.12, <3.11"

dependencies = [
    # Core API Framework
    "fastapi==0.115.9",
    "uvicorn==0.34.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.6.0",
    # LLM & RAG Framework
    "langchain==0.3.26",
    "langchain-chroma==0.2.4",
    "langchain-cohere==0.3.3",
    "langchain-community==0.3.27",
    "langchain-core==0.3.68",
    "langchain-experimental==0.3.3",
    "langchain-openai==0.2.3",
    "langchain-text-splitters==0.3.8",
    # LLM Providers
    "openai==1.52.0",
    "cohere==5.13.11",
    # AWS / Bedrock
    "boto3==1.39.3",
    "botocore==1.39.3",
    "langchain-aws==0.2.27",
    # Vector Database
    "chromadb==1.0.12",
    "chroma-hnswlib==0.7.3",
    # HTTP Clients
    "httpx==0.27.2",
    "httpx-sse==0.4.0",
    "httpcore==1.0.7",
    # PDF Processing
    "pymupdf==1.23.26",
    # Configuration & Utilities
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    # LangSmith
    "langsmith==0.4.4",
    # Tokenization
    "tiktoken==0.8.0",
    "tokenizers==0.21.0",
    "langchain-ollama>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "mypy==1.18.2",
    "types-pyyaml==6.0.12.20250915",
    "ruff==0.14.3",
]
integration = ["behave==1.2.6", "kubernetes==31.0.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff
[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-after-imports = 2
known-first-party = ["app"]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy
[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
mypy_path = "."

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
