[project]
name = "rag-docs-frontend"
version = "0.0.1"
description = "Streamlit frontend for RAG docs"
requires-python = ">=3.10.12,<3.11"

dependencies = ["streamlit==1.41.1", "requests==2.32.3", "python-dotenv==1.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["front"]
