[project]
name = "rag-docs-frontend"
version = "0.0.1"
description = "Streamlit frontend for RAG docs"
requires-python = ">=3.10.12,<3.11"

dependencies = [
    "streamlit==1.41.1",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.6.0",
]

[project.optional-dependencies]
dev = ["mypy==1.18.2", "ruff==0.14.3", "types-requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["front"]

# Ruff
[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-after-imports = 2
known-first-party = ["app"]
combine-as-imports = true
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy
[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
mypy_path = "."

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
